# Jams

./: Cargo.toml  README.md  justfile
i18n/en/: cosmic_app_template.ftl  jams.ftl
i18n/sv/: cosmic_app_template.ftl  jams.ftl
res/: com.benfuddled.Jams.desktop  com.benfuddled.Jams.metainfo.xml  com.example.CosmicAppTemplate.metainfo.xml
src/: app.rs  icon_cache.rs  main.rs  player.rs
