[package]
name = "jams"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[features]
default = ["xdg-portal"]
rfd = ["libcosmic/rfd"]
xdg-portal = ["libcosmic/xdg-portal"]

[dependencies]
i18n-embed-fl = "0.8"
once_cell = "1.19.0"
open = "5.1.3"
rust-embed = "8.3.0"
lazy_static = "1.4.0"
url = "2.4.0"
walkdir = "=2.5.0"
gstreamer = "0.23.5"
gstreamer-pbutils = "0.23.5"
infer = "0.19.0"
gstreamer-play = "0.23.5"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

#[target.'cfg(not(target_os = "linux"))'.dependencies]
arrayvec = "0.7.1"
cpal = "0.13.3"
rb = "0.3.2"
rubato = "0.12.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

# Cargo deb
# Edit here to customize the package metadata
# Especially the Assets section
[package.metadata.deb]
maintainer = "Benjamin Richardson"
copyright = "2025 Benjamin Richardson"
# license-file = "LICENSE"
extended-description = """\
Yet another music player. \
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/jams", "usr/bin/jams", "755"],
    ["res/com.benfuddled.Jams.metainfo.xml", "usr/share/metainfo/com.benfuddled.Jams.metainfo.xml", "644"],
    ["res/com.benfuddled.Jams.desktop", "usr/share/applications/com.benfuddled.Jams.desktop", "644"],
    #    ["res/icons/hicolor/", "usr/share/icons/hicolor/", "644"]
]
